add circle and triangle button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                     <button data-mode="rectangle" class="button-mode" type="button">
                         Rectangle
                     </button>
+                    <button data-mode="circle" class="button-mode" type="button">
+                        Circle
+                    </button>
+                    <button data-mode="triangle" class="button-mode" type="button">
+                        Triangle
+                    </button>
                 </div>
             </div>
             <div class="webpaint-canvas-cnt">
