add save and clean icon and add clean function

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     <button data-mode="triangle" class="button-mode" type="button">
                         Triangle
                     </button>
+                    <button id="clear" class="button-fn" type="button">
+                        Clear
+                    </button>
+                    <button id="save" class="button-fn" type="button">save</button>
                 </div>
             </div>
             <div class="webpaint-canvas-cnt">
