--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                 <output for="paintSize" class="paint-size-val"></output>
 
                 <input type="color" class="paint-color">
-
                 <div class="webpaint-buttons-cnt">
+                    <button data-mode="eraser" class="button-mode" type="button">
+                        Eraser
+                    </button>
                     <button data-mode="pen" class="button-mode" type="button">
                         Pen
                     </button>
@@ -34,7 +36,8 @@
                     <button id="clear" class="button-fn" type="button">
                         Clear
                     </button>
-                    <button id="save" class="button-fn" type="button">save</button>
+                    <button id="save" class="button-fn" type="button">save
+                    </button>
                 </div>
             </div>
             <div class="webpaint-canvas-cnt">
