add fill function

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                     <button data-mode="triangle" class="button-mode" type="button">
                         Triangle
                     </button>
+                    <button id="fill" class="button-fn" type="button">Fill
+                    </button>
                     <button id="clear" class="button-fn" type="button">
                         Clear
                     </button>
-                    <button id="save" class="button-fn" type="button">save
+                    <button id="save" class="button-fn" type="button">Save
                     </button>
                 </div>
             </div>
